unified_tests/function_calls/unknown_function/expect/build.text.stderr
lib.copp:2:12: error: unknown function 'missing'
      return missing(1)
             ^
